# ehrenfest_model

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ehrenfest.c  ehrenfest.py  ehrenfest_basic.c  ehrenfest_modified.c  frequency.py  functions.c  functions.h  main.c  plots_basic.py  plots_modified.py
src/basic/: CMakeLists.txt  ehrenfest_basic.c  plots_basic.py
src/modified/: CMakeLists.txt  ehrenfest_modified.c  plots_modified.py
